la dernière correction

--- a/histoiredinternet.html
+++ b/histoiredinternet.html
@@ -2,6 +2,7 @@
 <html lang="fr">
  <head>
   <title>Historique de l'Internet</title>
+  <meta charset="utf-8">
  </head>
  <body>
      <h1> Histoire d’Internet</h1> 
@@ -164,11 +165,11 @@ télécommunications.
                                                                                                                                                                                         </tr> 
      </table>
  
-
+  <figure>
      <img src="First_Web_Server.jpeg" alt="first_web_server"/>
-     <p>Fig.1 - Le premier​ serveur web​ , actuellement au musée du​ CERN​ , étiqueté « ​ This machine is a
+    Fig.1 - Le premier​ serveur web​ , actuellement au musée du​ CERN​ , étiqueté « ​ This machine is a
         server. DO NOT POWER IT DOWN!! ​ »
-    </p>
+  </figure>
         
             <h2>
                 Protocole TCP/IP
