--- a/page2.html
+++ b/page2.html
@@ -25,14 +25,14 @@
     <em>Le web est plus une invention sociale que technologique. Je l’ai conçu pour qu’il ait un
         effet social – aider les gens à travailler ensemble – et non comme un jouet
         technologique. — Tim Berners-Lee, Weaving the Web, 1999</em>
-
+   <figure>
         <img src="Logo.svg" alt="logo du web"/> 
- <p>
-Fig 1 : Logo historique du World Wide Web par Robert Cailliau.
-</p>
-<p>
+    
+<figcaption>Fig 1 : Logo historique du World Wide Web par Robert Cailliau.</figcaption>
+</figure>
+<h2>
  <strong>  Spécifications</strong>
-</p>
+</h2>
 
  <strong> Abréviations</strong>
   
@@ -52,81 +52,81 @@ Fig 1 : Logo historique du World Wide Web par Robert Cailliau.
 </ul>
 <p>La première page Web</p>
 <p>Voici le code de la première page Web :</p>
-<!--
+
 <pre>
-    &lt;HEADER>
-    &lt;TITLE>The World Wide Web project &lt;TITLE>
-        &lt;NEXTID N="55">
-        &lt;HEADER>
-        &lt;BODY>
+    &lt;HEADER&gt;
+    &lt;TITLE>The World Wide Web project &lt;TITLE&gt;
+        &lt;NEXTID N="55"&gt;
+        &lt;HEADER&gt;
+        &lt;BODY&gt;
         &lt;H1>World Wide Web &lt;H1>The WorldWideWeb (W3) is a wide-area &lt;A
         NAME=0 HREF="WhatIs.html">
         hypermedia &lt;A> information retrieval
         initiative aiming to give universal
-        access to a large universe of documents.<P>
+        access to a large universe of documents.P&gt;
         Everything there is online about
         W3 is linked directly or indirectly
         to this document, including an A
         NAME=24 HREF="Summary.html">executive
         summary &lt;A> of the project, A
-        NAME=29 HREF="Administration/Mailing/Overview.html">Mailing lists &lt;A>
+        NAME=29 HREF="Administration/Mailing/Overview.html">Mailing lists &lt;A&gt;
         ,  &lt;A
         NAME=30 HREF="Policy.html">Policy &lt;A> , November's  &lt;A
-        NAME=34 HREF="News/9211.html">W3 news &lt;A> ,
+        NAME=34 HREF="News/9211.html">W3 news &lt;A&gt; ,
             &lt;A
-        NAME=41 HREF="FAQ/List.html">Frequently Asked Questions &lt;A> .
-            &lt;DL>
+        NAME=41 HREF="FAQ/List.html">Frequently Asked Questions &lt;A&gt; .
+            &lt;DL&gt;
             &lt;DT> &lt;A
-        NAME=44 HREF="../DataSources/Top.html">What's out there? &lt;A>
+        NAME=44 HREF="../DataSources/Top.html">What's out there? &lt;A&gt;
         &lt;DD> Pointers to the
         world's online information, &lt;A
-        NAME=45 HREF="../DataSources/bySubject/Overview.html"> subjects &lt;A>
+        NAME=45 HREF="../DataSources/bySubject/Overview.html"> subjects &lt;A&gt;
         ,  &lt;A
         NAME=z54 HREF="../DataSources/WWW/Servers.html">W3 servers &lt;A>, etc.
             &lt;DT> &lt;A
-        NAME=46 HREF="Help.html">Help &lt;A>
+        NAME=46 HREF="Help.html">Help &lt;A&gt;
         &lt;DD> on the browser you are using
         &lt;DT> &lt;A
-        NAME=13 HREF="Status.html">Software Products &lt;A>
+        NAME=13 HREF="Status.html">Software Products &lt;A&gt;
         &lt;DD> A list of W3 project
         components and their current state.
         (e.g.  &lt;A
         NAME=27 HREF="LineMode/Browser.html">Line Mode &lt;A> ,X11  &lt;A
         NAME=35 HREF="Status.html#35">Viola &lt;A> ,  &lt;A
-        NAME=26 HREF="NeXT/WorldWideWeb.html">NeXTStep &lt;/A>
+        NAME=26 HREF="NeXT/WorldWideWeb.html">NeXTStep &lt;/A&gt;
         ,  &lt;A
         NAME=25 HREF="Daemon/Overview.html">Servers &lt;A> ,  &lt;A
         NAME=51 HREF="Tools/Overview.html">Tools &lt;A> , &lt;A
         NAME=53 HREF="MailRobot/Overview.html"> Mail robot &lt;A> , &lt;A
-        NAME=52 HREF="Status.html#57">
+        NAME=52 HREF="Status.html#57"&gt;
         Library &lt;A> ) &lt;DT> &lt;A
-        NAME=47 HREF="Technical.html">Technical &lt;A>
+        NAME=47 HREF="Technical.html">Technical &lt;A &gt;
             &lt;DD> Details of protocols, formats,
         program internals etc
         &lt;DT> &lt;A
-        NAME=40 HREF="Bibliography.html">Bibliography<A>
+        NAME=40 HREF="Bibliography.html">Bibliography A &gt;
             &lt;DD> Paper documentation
         on W3 and references.
         &lt;DT> &lt;A
-        NAME=14 HREF="People.html">People &lt;A>
+        NAME=14 HREF="People.html">People &lt;A&gt;
             &lt;DD> A list of some people involved
         in the project.
         &lt;DT> &lt;A
-        NAME=15 HREF="History.html">History &lt;A>
+        NAME=15 HREF="History.html">History &lt;A&gt;
             &lt;DD> A summary of the history
         of the project.
         &lt;DT> &lt;A
-        NAME=37 HREF="Helping.html">How can I help &lt;A> ?
+        NAME=37 HREF="Helping.html">How can I help &lt;A &gt;?
             &lt;DD> If you would like
         to support the web..
         &lt;DT> &lt;A
-        NAME=48 HREF="../README.html">Getting code &lt;A>
+        NAME=48 HREF="../README.html">Getting code &lt;A&gt;
             &lt;DD> Getting the code by &lt;A
-        NAME=49 HREF="LineMode/Defaults/Distribution.html">
-        anonymous FTP &lt;A> , etc. &lt;A>
-        &lt;DL>
-        &lt;BODY>
+        NAME=49 HREF="LineMode/Defaults/Distribution.html"&gt;
+        anonymous FTP &lt;A> , etc. &lt;A&gt;
+        &lt;DL&gt;
+        &lt;BODY&gt;
 </pre>
--->
+
  </body>
 </html>
