--- a/histoiredinternet.html
+++ b/histoiredinternet.html
@@ -3,6 +3,8 @@
  <head>
   <title>Historique de l'Internet</title>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet"href=page1.css>
  </head>
  <body>
      <h1> Histoire d’Internet</h1> 
@@ -27,10 +29,13 @@ télécommunications.
         contribua à modifier fondamentalement l’économie mondiale, y compris avec les retombées de
         la bulle Internet.
     </p>
-  
-        <h2>Chronologie sélective</h2>
+
    
      <table >
+         <caption>
+            Chronologie sélective
+         </caption>
+
          <tr>
             <th>Année</th>
             <th>Evénement</th>
@@ -166,9 +171,13 @@ télécommunications.
      </table>
  
   <figure>
+
      <img src="First_Web_Server.jpeg" alt="first_web_server"/>
-    Fig.1 - Le premier​ serveur web​ , actuellement au musée du​ CERN​ , étiqueté « ​ This machine is a
+    <figcaption>
+        - Le premier​ serveur web​ , actuellement au musée du​ CERN​ , étiqueté « ​ This machine is a
         server. DO NOT POWER IT DOWN!! ​ »
+    </figcaption> 
+
   </figure>
         
             <h2>
@@ -185,7 +194,7 @@ avec l'ARPANET, les hôtes en étaient maintenant responsables. Vinton G. Cerf a
 Hubert Zimmermann et Louis Pouzin (développeurs du réseau Cyclades) un important travail de
 développement.
         </p>
-        <p>
+        <p class="para">
             Avec le rôle du réseau physique réduit à son strict minimum, il devint alors possible de
 fusionner à peu près tout type de réseau sans tenir compte de leurs caractéristiques et ainsi
 résoudre le problème que s'était posé Robert E. Kahn à ses débuts. La DARPA accepta de
