--- a/page2.html
+++ b/page2.html
@@ -3,6 +3,8 @@
  <head>
   <title>world wide web</title>
 <meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Roboto&display=swap" rel="stylesheet">
+<link rel="stylesheet"href=page1.css>
  </head>
      
      <h1> World Wide Web</h1> 
@@ -26,7 +28,7 @@
         effet social – aider les gens à travailler ensemble – et non comme un jouet
         technologique. — Tim Berners-Lee, Weaving the Web, 1999</em>
    <figure>
-        <img src="Logo.svg" alt="logo du web"/> 
+        <img src="Logo.svg" alt="logo du web" class="center">
     
 <figcaption>Fig 1 : Logo historique du World Wide Web par Robert Cailliau.</figcaption>
 </figure>
