--- a/histoiredinternet.html
+++ b/histoiredinternet.html
@@ -4,7 +4,7 @@
   <title>Historique de l'Internet</title>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet"href=page1.css>
+  <link rel="stylesheet" href="page1.css">
  </head>
  <body>
      <h1> Histoire d’Internet</h1> 
@@ -174,8 +174,9 @@ télécommunications.
 
      <img src="First_Web_Server.jpeg" alt="first_web_server"/>
     <figcaption>
-        - Le premier​ serveur web​ , actuellement au musée du​ CERN​ , étiqueté « ​ This machine is a
+        Fig 1 - Le premier​ serveur web​ , actuellement au musée du​ CERN​ , étiqueté « ​ This machine is a
         server. DO NOT POWER IT DOWN!! ​ »
+        
     </figcaption> 
 
   </figure>
