--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
   <title>world wide web</title>
 <meta charset="utf-8">
 <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Roboto&display=swap" rel="stylesheet">
-<link rel="stylesheet"href=page1.css>
+<link rel="stylesheet" href="page1.css">
  </head>
      
      <h1> World Wide Web</h1> 
